# langgraph-prac

./: .gitignore  AGENTS.md  main.py  pyproject.toml
notebooks/: get_started.ipynb  workflows_and_agents.ipynb
notebooks/build_a_custom_workflow/: 1_build_a_basic_chatbot.ipynb  2_add_tools.ipynb  3_add_memory.ipynb  4_add_human_in_the_loop.ipynb  5_customize_state.ipynb  6_time_travel.ipynb
