[project]
name = "langgraph-prac-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain-ollama>=0.3.8",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
]
