[project]
name = "langgraph-prac-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain-ollama>=0.3.8",
    "langchain-tavily>=0.2.11",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.31",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pygraphviz>=1.14",
    "pyppeteer>=2.0.0",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
]
